15ИЭ-00-13: add a few lines

--- a/doc/ДВК/15ИЭ-00-13_Техническое_описание.md
+++ b/doc/ДВК/15ИЭ-00-13_Техническое_описание.md
@@ -12,12 +12,21 @@
     <dt>ЗУ  <dd>Запоминающее устройство
 </dl>
 
+## 3. ТЕХНИЧЕСКИЕ ДАННЫЕ
+
+3.5. Дисплей формирует изображение не менее 192 символов (160 символов прописных и строчных букв русского и латинского алфавитов,
+арабских цифр, специальных символов по ГОСТ 13052-74 согласно рис.1
+и 32 служебных символа коды (000÷037), отображаемых как символы латинского алфавита с кодами (100÷137), но с миганием с частотой 5 Гц.
 
 ### Система Команд №1
 
 |Восьмеричный код|Мнемоническое обозначение|Название команды|Выполняемая операция|
 |------------|-------------|--------|-----------|
-|037         |             |Стирание страницы|Стирание текста от позиции маркера до конца страницы|
+|010         |  H          |Возврат             |Перемещение маркера в начало страницы|
+|016         |  N          |Русский регистр     |Переход к кодам КОИ-7, набор 1|
+|017         |  O          |Латинский регистр   |Переход к кодам КОИ-7, набор 0|
+|026         |  V          |Сдвиг текста вниз   |Сдвигается текст вниз на одну строку|
+|037         |             |Стирание страницы   |Стирание текста от позиции маркера до конца страницы|
 
 
 ### Система Команд №2
@@ -25,8 +34,11 @@
 |кодов|символов|Название команды|Выполняемая операция|
 |------------|-------------|--------|-----------|
 |015         |             |Русский регистр|Переход к кодам КОИ-7, набор 1|
+|016         |  N          |Русский регистр     |Переход к кодам КОИ-7, набор 1|
+|017         |  O          |Латинский регистр   |Переход к кодам КОИ-7, набор 0|
 |033 105     |АР2 E        |Переход к системе команд №1|Осуществляется переход к системе команд №1|
 |033 110     |АР2 H        |Возврат                    |Перемещение маркера в начало страницы     |
+|033 112     |АР2 J        |Стирание страницы          |Стирание текста от позиции маркера до конца страницы |
 
 ### ВНИМАНИЕ!
 Ввиду того, что постоянно ведётся работа по повышению качества изделия, в дисплее и его узлах
